rename two-cells class, fix c-select-wrap

--- a/src/scss/stratifi/_app-tables.scss
+++ b/src/scss/stratifi/_app-tables.scss
@@ -134,7 +134,7 @@
     }
   }
 
-  &.two-cells {
+  &-two-cells {
     th,
     td {
       width: 50%;
